--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 body {background-image: url(background.jpg);
       font-family: Arial, Verdana, sans-serif;
 	  }
+
+      h1 { background-image: url(lighthouselogo.jpg);
+    background-repeat: no-repeat;
+    height: 100px; width: 650px; font-size: 3em;
+    padding-left: 150px; padding-top: 30px;
+    border: 1px solid #000033;
+    border-radius: 15px; }
+
 h2 { color: #000033; 
      font-family: arial, sans-serif;
 }
